# hyperpcr

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: docker.yaml
dockerfile/: Dockerfile  build.sh
dockerfiles/: Dockerfile  run.sh
pcr/: misc.py  misc_download.py
pcr_yarp/: cloud_output.py  config.py  image_input.py  module.py  pose_output.py
pcr_yarp/app/: hyperpcr.xml  hyperpcr_roft.xml  hyperpcr_roft_two_displays.xml
src/viewer/: CMakeLists.txt
src/viewer/config/: config.ini.template
src/viewer/include/: PointCloud.h  Viewer.h
src/viewer/src/: PointCloud.cpp  Viewer.cpp  main.cpp
tests/: reconstruction.txt  test.py  test_loop.py  test_pc_to_frame.py  test_pcr_dataset.py  test_pcr_grasping.py  uniform.txt
yarp_sample/: config.py  module.py  pose_filter.py
yarp_sample/app/: hyperpcr.xml
