[tool.poetry]
name = "hyperpcr"
packages = [
    {include = "pcr"},
    {include = "pcr_yarp"}
]
version = "0.3.7"
description = "Point Cloud Reconstruction with HyperNetwork"
authors = ["andrearosasco <andrea.rosasco@iit.it>, nicolapiga <nicola.piga@iit.it>"]

[tool.poetry.dependencies]
python = "^3.6"
timm = "^0.5.4"
rich = "^12.2.0"
requests = "^2.17"
open3d = "^0.16"
dbscan = "^0"
pyquaternion ="^0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pcr_yarp_module = 'pcr_yarp.module:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
